Fix menu flickering

--- a/sass/custom/_paulus.scss
+++ b/sass/custom/_paulus.scss
@@ -67,15 +67,15 @@ ul, ol, dd {
 .menu li a {
   @include box-sizing(border-box);
   display: block;
-  padding: 27px 0px;
-  margin: 0 14px;
+  padding: 27px 0px 12px;
+  margin: 0 14px 27px;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 15px;
   line-height: 1;
 }
 
 .menu > li > a {
-  font-family: $heading-font;
+  // font-family: $heading-font;
   font-weight: 500;
   // text-transform: uppercase;
 }
@@ -86,7 +86,7 @@ ul, ol, dd {
   box-shadow: inset 0px -5px $primary-color;
   color: $navigation-color;
   padding-bottom: 12px;
-  margin-bottom: 32px;
+  margin-bottom: 27px;
 }
 
 .site-header {
